temp save during dm work

--- a/FrontEnd/src/styles/global.css
+++ b/FrontEnd/src/styles/global.css
@@ -13,10 +13,14 @@
     justify-content: center;
 }
 
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #loginContainer {
     padding-top: 200px;
 }
 
-.smallerForm {
-    align-items: center;
-}
