--- a/FrontEnd/src/styles/global.css
+++ b/FrontEnd/src/styles/global.css
@@ -24,3 +24,13 @@
 .smallerForm {
     align-items: center;
 }
+
+a {
+    color: #E6E9E3;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #E6E9E3;
+    text-decoration: none;
+}
